added header and women jacket part

--- a/index.html
+++ b/index.html
@@ -15,50 +15,84 @@
     <style>
         .bebas-neue-font {
             font-family: "Bebas Neue", serif;
-            font-weight: 400;
-            font-style: normal;
         }
 
         .roboto-font {
             font-family: "Roboto", serif;
-            font-optical-sizing: auto;
-            font-weight: 400;
-            font-style: normal;
-            font-variation-settings:
-                "wdth" 100;
         }
     </style>
 </head>
 
 
 <body class="roboto-font">
-    <header class="px-[17px] bg-[#FFFBF0]">
-        <nav class="flex items-center justify-between pt-[27px] max-w-[1170px] m-auto sm:py-[40]">
-            <div class="max-w-[192px] max-h-[26px] sm:max-w-[291px] max-h-[40px]">
-                <img class="w-full h-full" src="./icons/logo.png" alt="">
+  <header class="bg-[#FFFBF0] pl-4">
+    <!-- nav part start -->
+    <nav></nav>
+    <!-- banner start -->
+    <div class="md:flex md:items-center md:justify-around">
+<div>
+<h1 class="text-7xl uppercase bebas-neue-font">
+    <span class="text-orange-400">Be the Penguins</span>
+    <br>
+    <span class="text-stone-800">of Winter</span></h1>
+<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+<button
+class="text-[#FFFFFF] py-[18px] px-[33px] rounded-[10px] bg-linear-to-r from-[#A4BC46] to-[#85A019]"><i
+    class="fa-solid fa-cart-plus"></i> BUY NOW</button>
+</div>
+<div>
+    <img src="./images/model.png" alt="">
+</div>
+    </div>
+  </header>
+    <main class="max-w-7xl m-auto">
+<!-- womwn jackets section -->
+ <section class="my-12">
+    <h3 class="text-5xl text-[#363958] bebas-neue-font">W0Man Jacket</h3>
+    <!-- jacket card container -->
+     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+        <!-- jacket card-1 -->
+         <div class="p-5 space-y-4 drop-shadow-lg rounded-3xl">
+            <img class="rounded-3xl p-5 bg-[#F1F1F1]" src="./images/jacket-1.png" alt="">
+            <h4 class="text-2xl font-bold">Yellow Coat Jacket </h4>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            <div class="flex justify-between items-center">
+                <h2 class="text-[#FABE4C] text-4xl">$234</h2>
+                <button
+                class="text-[#FFFFFF] py-[18px] px-[33px] rounded-[10px] bg-linear-to-r from-[#A4BC46] to-[#85A019]"><i
+                class="fa-solid fa-cart-plus"></i> BUY NOW</button>
             </div>
-            <ul class="hidden sm:flex sm:block sm:gap-[57px] ">
-                <li class="sm:text-[#3C3C3C] sm:font-medium"><a href=""></a>Home</li>
-                <li class="sm:text-[#3C3C3C] sm:font-medium"><a href=""></a>Product</li>
-                <li class="sm:text-[#3C3C3C] sm:font-medium"><a href=""></a>About us</li>
-                <li class="sm:text-[#3C3C3C] sm:font-medium"><a href=""></a>Contact us</li>
-            </ul>
-            <div class="sm:hidden"><i class="fa-solid fa-bars text-[30px]"></i></div>
-        </nav>
-        <!-- banner part start -->
-        <section class="pt-[52px] pb-[45px] sm:pt-[0px] pb-[130px] max-w-[1170px] m-auto sm:flex sm:items-center sm:gap-[183px]">
-            <div>
-                <h1 class="bebas-neue-font max-w-[312px] text-6xl text-[#363958] sm:text-[80px] sm:max-w-[416px]">
-                    <span class="text-[#FABE4C]">Be the Penguins</span> of Winter</h1>
-                <p class="max-w-[295px] text-[#3E3E3E] leading-[26px] mb-[24px]">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-                <button class="text-[#FFFFFF] py-[18px] px-[33px] bg-red-500 rounded-[10px] bg-linear-to-r from-[#A4BC46] to-[#85A019]"><i class="fa-solid fa-cart-plus"></i> BUY NOW</button>
+        </div>
+        <!-- jacket card-2 -->
+         <div class="p-5 space-y-4 drop-shadow-lg rounded-3xl">
+            <img class="rounded-3xl p-5 bg-[#F1F1F1]" src="./images/jacket-2.png" alt="">
+            <h4 class="text-2xl font-bold">Yellow Coat Jacket </h4>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            <div class="flex justify-between items-center">
+                <h2 class="text-[#FABE4C] text-4xl">$234</h2>
+                <button
+                class="text-[#FFFFFF] py-[18px] px-[33px] rounded-[10px] bg-linear-to-r from-[#A4BC46] to-[#85A019]"><i
+                class="fa-solid fa-cart-plus"></i> BUY NOW</button>
             </div>
-           <div class="max-w-[361px] max-h-[368px] sm:max-w-[550px] max-h-[560px]">
-            <img class="w-full h-full" src="./images/model.png" alt="">
-           </div>
-        </section>
-    </header>
+        </div>
+        <!-- jacket card-3 -->
+         <div class="p-5 space-y-4 drop-shadow-lg rounded-3xl">
+            <img class="rounded-3xl p-5 bg-[#F1F1F1]" src="./images/jacket-3.png" alt="">
+            <h4 class="text-2xl font-bold">Yellow Coat Jacket </h4>
+            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+            <div class="flex justify-between items-center">
+                <h2 class="text-[#FABE4C] text-4xl">$234</h2>
+                <button
+                class="text-[#FFFFFF] py-[18px] px-[33px] rounded-[10px] bg-linear-to-r from-[#A4BC46] to-[#85A019]"><i
+                class="fa-solid fa-cart-plus"></i> BUY NOW</button>
+            </div>
+        </div>
+     </div>
+ </section>
+    </main>
+    <footer>
 
+    </footer>
 </body>
 
 </html>
