--- a/index.html
+++ b/index.html
@@ -25,70 +25,157 @@
 
 
 <body class="roboto-font">
-  <header class="bg-[#FFFBF0] pl-4">
-    <!-- nav part start -->
-    <nav></nav>
-    <!-- banner start -->
-    <div class="md:flex md:items-center md:justify-around">
-<div>
-<h1 class="text-7xl uppercase bebas-neue-font">
-    <span class="text-orange-400">Be the Penguins</span>
-    <br>
-    <span class="text-stone-800">of Winter</span></h1>
-<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
-<button
-class="text-[#FFFFFF] py-[18px] px-[33px] rounded-[10px] bg-linear-to-r from-[#A4BC46] to-[#85A019]"><i
-    class="fa-solid fa-cart-plus"></i> BUY NOW</button>
-</div>
-<div>
-    <img src="./images/model.png" alt="">
-</div>
-    </div>
-  </header>
+    <header class="bg-[#FFFBF0] pl-4">
+        <!-- nav part start -->
+        <nav></nav>
+        <!-- banner start -->
+        <div class="md:flex md:items-center md:justify-around">
+            <div>
+                <h1 class="text-7xl uppercase bebas-neue-font">
+                    <span class="text-orange-400">Be the Penguins</span>
+                    <br>
+                    <span class="text-stone-800">of Winter</span>
+                </h1>
+                <p class="my-[15px]">Lorem Ipsum is simply dummy text of the
+                    <br>
+                     printing and typesetting industry.</p>
+                <button
+                    class="text-[#FFFFFF] py-[18px] px-[33px] rounded-[10px] bg-linear-to-r from-[#A4BC46] to-[#85A019]"><i
+                        class="fa-solid fa-cart-plus"></i> BUY NOW</button>
+            </div>
+            <div>
+                <img src="./images/model.png" alt="">
+            </div>
+        </div>
+    </header>
     <main class="max-w-7xl m-auto">
-<!-- womwn jackets section -->
- <section class="my-12">
-    <h3 class="text-5xl text-[#363958] bebas-neue-font">W0Man Jacket</h3>
-    <!-- jacket card container -->
-     <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
-        <!-- jacket card-1 -->
-         <div class="p-5 space-y-4 drop-shadow-lg rounded-3xl">
-            <img class="rounded-3xl p-5 bg-[#F1F1F1]" src="./images/jacket-1.png" alt="">
+        <!-- womwn jackets section -->
+        <section class="my-12">
+            <h3 class="text-5xl text-[#363958] bebas-neue-font text-center md:text-start">WoMan Jacket</h3>
+            <!-- women jacket card container -->
+            <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-7">
+                <!-- women jacket card-1 -->
+                <div class="p-5 rounded-[20px] shadow-lg space-y-4">
+                    <img class="rounded-3xl p-5 bg-[#F1F1F1]" src="./images/jacket-1.png" alt="">
+                    <h4 class="text-2xl font-bold">Yellow Coat Jacket </h4>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <div class="flex justify-between items-center">
+                        <h2 class="text-[#FABE4C] text-4xl">$234</h2>
+                        <button
+                            class="text-[#FFFFFF] py-[18px] px-[33px] rounded-[10px] bg-linear-to-r from-[#A4BC46] to-[#85A019]"><i
+                                class="fa-solid fa-cart-plus"></i> BUY NOW</button>
+                    </div>
+                </div>
+                <!--women jacket card-2 -->
+                <div class="p-5 rounded-[20px] shadow-lg space-y-4">
+                    <img class="rounded-3xl p-5 bg-[#F1F1F1]" src="./images/jacket-2.png" alt="">
+                    <h4 class="text-2xl font-bold">Yellow Coat Jacket </h4>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <div class="flex justify-between items-center">
+                        <h2 class="text-[#FABE4C] text-4xl">$234</h2>
+                        <button
+                            class="text-[#FFFFFF] py-[18px] px-[33px] rounded-[10px] bg-linear-to-r from-[#A4BC46] to-[#85A019]"><i
+                                class="fa-solid fa-cart-plus"></i> BUY NOW</button>
+                    </div>
+                </div>
+                <!--women jacket card-3 -->
+                <div class="p-5 rounded-[20px] shadow-lg space-y-4">
+                    <img class="rounded-3xl p-5 bg-[#F1F1F1]" src="./images/jacket-3.png" alt="">
+                    <h4 class="text-2xl font-bold">Yellow Coat Jacket </h4>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <div class="flex justify-between items-center">
+                        <h2 class="text-[#FABE4C] text-4xl">$234</h2>
+                        <button
+                            class="text-[#FFFFFF] py-[18px] px-[33px] rounded-[10px] bg-linear-to-r from-[#A4BC46] to-[#85A019]"><i
+                                class="fa-solid fa-cart-plus"></i> BUY NOW</button>
+                    </div>
+                </div>
+            </div>
+        </section>
+<!-- Man Jacket section -->
+ <section class="my-12 mx-4">
+    <h3 class="text-5xl text-[#363958] bebas-neue-font text-center md:text-start">Man Jacket</h3>
+    <!-- Man Jacket cards container-->
+     <div class="md:grid md:grid-cols-3 gap-7">
+<!-- Man Jacket card-1 -->
+        <div class="p-5 rounded-[20px] shadow-lg space-y-4">
+                <img class="bg-[#F1F1F1] rounded-[20px] p-[35px]" src="./images/jacket-4.png" alt="">
             <h4 class="text-2xl font-bold">Yellow Coat Jacket </h4>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
             <div class="flex justify-between items-center">
                 <h2 class="text-[#FABE4C] text-4xl">$234</h2>
                 <button
-                class="text-[#FFFFFF] py-[18px] px-[33px] rounded-[10px] bg-linear-to-r from-[#A4BC46] to-[#85A019]"><i
-                class="fa-solid fa-cart-plus"></i> BUY NOW</button>
+                    class="text-[#FFFFFF] py-[18px] px-[33px] rounded-[10px] bg-linear-to-r from-[#A4BC46] to-[#85A019]"><i
+                        class="fa-solid fa-cart-plus"></i> BUY NOW</button>
             </div>
         </div>
-        <!-- jacket card-2 -->
-         <div class="p-5 space-y-4 drop-shadow-lg rounded-3xl">
-            <img class="rounded-3xl p-5 bg-[#F1F1F1]" src="./images/jacket-2.png" alt="">
+<!-- Man Jacket card-2 -->
+        <div class="p-5 rounded-[20px] shadow-lg space-y-4">
+                <img class="bg-[#F1F1F1] rounded-[20px] p-[35px]" src="./images/jacket-5.png" alt="">
             <h4 class="text-2xl font-bold">Yellow Coat Jacket </h4>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
             <div class="flex justify-between items-center">
                 <h2 class="text-[#FABE4C] text-4xl">$234</h2>
                 <button
-                class="text-[#FFFFFF] py-[18px] px-[33px] rounded-[10px] bg-linear-to-r from-[#A4BC46] to-[#85A019]"><i
-                class="fa-solid fa-cart-plus"></i> BUY NOW</button>
+                    class="text-[#FFFFFF] py-[18px] px-[33px] rounded-[10px] bg-linear-to-r from-[#A4BC46] to-[#85A019]"><i
+                        class="fa-solid fa-cart-plus"></i> BUY NOW</button>
             </div>
         </div>
-        <!-- jacket card-3 -->
-         <div class="p-5 space-y-4 drop-shadow-lg rounded-3xl">
-            <img class="rounded-3xl p-5 bg-[#F1F1F1]" src="./images/jacket-3.png" alt="">
+<!-- Man Jacket card-3 -->
+        <div class="p-5 rounded-[20px] shadow-lg space-y-4">
+                <img class="bg-[#F1F1F1] rounded-[20px] p-[35px]" src="./images/jacket-6.png" alt="">
             <h4 class="text-2xl font-bold">Yellow Coat Jacket </h4>
-            <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
+                    <p>Lorem Ipsum is simply dummy text of the printing and typesetting industry.</p>
             <div class="flex justify-between items-center">
                 <h2 class="text-[#FABE4C] text-4xl">$234</h2>
                 <button
-                class="text-[#FFFFFF] py-[18px] px-[33px] rounded-[10px] bg-linear-to-r from-[#A4BC46] to-[#85A019]"><i
-                class="fa-solid fa-cart-plus"></i> BUY NOW</button>
+                    class="text-[#FFFFFF] py-[18px] px-[33px] rounded-[10px] bg-linear-to-r from-[#A4BC46] to-[#85A019]"><i
+                        class="fa-solid fa-cart-plus"></i> BUY NOW</button>
             </div>
         </div>
      </div>
- </section>
+</section>
+
+
+
+
+
+        <!-- shop section -->
+        <section class="md:flex md:flex-row-reverse">
+            <div class="md:w-7/12">
+                <img  class="md:pl-[48px]" src="./images/shopping.png" alt="">
+            </div>
+            <!-- shop cards section -->
+            <div class="md:w-5/12">
+                <!-- shop card-1 -->
+<div class="shadow-lg py-[35px] md:py-5 px-7 m-4 rounded-[20px] flex flex-col	items-center md:flex-row">
+    <img class="w-[78px] h-[82px] " src="./icons/house.png" alt="">
+    <div class="md:ml-[36px] mt-4 md:mt-0">
+        <h4 class="text-[24px] text-[#363958] font-bold mb-[14px] text-center md:text-start">Find the Perfect Fit</h4>
+        <p class="text-[#3E3E3E] w-[276px] text-center md:text-start ">Everybody is different, which is why we offer styles for every body.</p>
+    </div>
+</div>
+                <!-- shop card-2 -->
+<div class="shadow-lg py-[35px] md:py-5 px-7 m-4 rounded-[20px] flex flex-col	items-center md:flex-row">
+    <img class="w-[78px] h-[82px] " src="./icons/box.png" alt="">
+    <div class="md:ml-[36px] mt-4 md:mt-0">
+        <h4 class="text-[24px] text-[#363958] font-bold mb-[14px] text-center md:text-start">Free Exchanges</h4>
+        <p class="text-[#3E3E3E] w-[276px] text-center md:text-start ">One of the many reasons you can shop
+            with peace of mind.</p>
+    </div>
+</div>
+                <!-- shop card-1 -->
+<div class="shadow-lg py-[35px] md:py-5 px-7 m-4 rounded-[20px] flex flex-col	items-center md:flex-row">
+    <img class="w-[78px] h-[82px] " src="./icons/question.png" alt="">
+    <div class="md:ml-[36px] mt-4 md:mt-0">
+        <h4 class="text-[24px] text-[#363958] font-bold mb-[14px] text-center md:text-start">Contact Our Seller</h4>
+        <p class="text-[#3E3E3E] w-[276px] text-center md:text-start ">They are here to help you. That's quite literally what we pay them for.</p>
+    </div>
+</div>
+
+            </div>
+            
+        </section>
     </main>
     <footer>
 
