some responsive issue solve

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </header>
     <main class="max-w-7xl m-auto">
         <!-- womwn jackets section -->
-        <section class="my-12">
+        <section class="my-12 mx-4">
             <h3 class="text-5xl text-[#363958] bebas-neue-font text-center md:text-start">WoMan Jacket</h3>
             <!-- women jacket card container -->
             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-7">
@@ -141,12 +141,12 @@
 
 
         <!-- shop section -->
-        <section class="md:flex md:flex-row-reverse">
+        <section class="md:flex md:flex-row-reverse py-[130px] md:items-center">
             <div class="md:w-7/12">
                 <img  class="md:pl-[48px]" src="./images/shopping.png" alt="">
             </div>
             <!-- shop cards section -->
-            <div class="md:w-5/12">
+            <div class="md:w-5/12 mt-12 md:mt-0">
                 <!-- shop card-1 -->
 <div class="shadow-lg py-[35px] md:py-5 px-7 m-4 rounded-[20px] flex flex-col	items-center md:flex-row">
     <img class="w-[78px] h-[82px] " src="./icons/house.png" alt="">
@@ -164,7 +164,7 @@
             with peace of mind.</p>
     </div>
 </div>
-                <!-- shop card-1 -->
+                <!-- shop card-3 -->
 <div class="shadow-lg py-[35px] md:py-5 px-7 m-4 rounded-[20px] flex flex-col	items-center md:flex-row">
     <img class="w-[78px] h-[82px] " src="./icons/question.png" alt="">
     <div class="md:ml-[36px] mt-4 md:mt-0">
